Добавляет стили блоку процесс производства(desktop)

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -13,6 +13,7 @@
   .catalog {
     .container(668px; 50px);
     padding-top: 42px;
+    margin-bottom: 53px;
   }
 }
 
@@ -20,6 +21,7 @@
   .catalog {
     width: 1050px;
     padding-top: 85px;
+    margin-bottom: 57px;
 
     &__list {
       display: flex;
