--- a/source/less/blocks/production.less
+++ b/source/less/blocks/production.less
@@ -1,5 +1,6 @@
 .production {
   .container(260px; 30px);
+  .center(260px);
   margin: 0 auto;
   margin-bottom: 58px;
 
@@ -7,7 +8,7 @@
     position: relative;
     box-sizing: border-box;
     border: 1px solid rgba(229, 229, 229, 1);
-    .center(260px);
+
 
     &::before {
       content: "";
@@ -22,6 +23,38 @@
       height: 77px;
       .bg-img("../../img/icon-play.svg");
     }
+
+    &:hover,
+    &:focus {
+      cursor: pointer;
+      box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+    }
+  }
+
+  &:active {
+    .item__header-box {
+      box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+    }
+  }
+
+  &:hover &__title,
+  &:focus &__title {
+    opacity: 0.6;
+  }
+
+  &:active &__title {
+    opacity: 0.3;
+  }
+
+  &:hover &__icon,
+  &:focus &__icon {
+    path {
+      fill: #63d1bb;
+    }
+  }
+
+  &:active &__icon {
+    opacity: 0.3;
   }
 
   &__title {
@@ -71,6 +104,7 @@
 
     &:hover,
     &:focus {
+      cursor: pointer;
       background-color: #444444;
       color: rgba(255, 255, 255, 1);
     }
@@ -84,8 +118,17 @@
 @media (min-width: @table-width) {
   .production {
     .container(668px; 50px);
-    display: flex;
-    flex-direction: column;
+    margin-bottom: 63px;
+
+    &__wrapper {
+      display: flex;
+      flex-direction: column;
+
+      &::before {
+        top: 189px;
+        left: 283px;
+      }
+    }
 
     &__video {
       width: 668px;
@@ -95,18 +138,31 @@
 
     &__title {
       order: -1;
-      margin-left: 42px;
+      width: auto;
+      margin-left: 41px;
       margin-right: 42px;
-      padding-left: 65px;
+      padding-top: 38px;
+      padding-left: 63px;
+      padding-bottom: 32px;
+      .font(20px; 700; 24px);
+
+      &::before {
+        top: 33px;
+        left: 0;
+      }
     }
 
     &__description {
-      margin-left: 42px;
+      .pm-zero();
+      margin-left: 39px;
       margin-right: 42px;
+      margin-bottom: 35px;
+      .font(15px; 400; 30px);
     }
 
     &__order {
       width: 584px;
+      margin-bottom: 45px;
     }
   }
 }
@@ -115,34 +171,51 @@
   .production {
     position: relative;
     width: 1050px;
-    padding-bottom: 60px;
-    align-items: flex-end;
+    padding-bottom: 42px;
+    display: flex;
+    justify-content: flex-end;
+
+
+    &__wrapper {
+      position: static;
+      padding-left: 77px;
+      &::before {
+        left: 340px;
+      }
+    }
 
     &__video {
       position: absolute;
+
       top: 0;
       left: 50px;
-      width: 683px;
+      width: 682px;
     }
 
     &__title {
-      width: 290px;
+      width: 150px;
       .pm-zero();
       margin-top: 40px;
-      height: 105px; /*временно*/
+      margin-right: 139px;
+      margin-bottom: 32px;
+      padding-top: 55px;
+
+      &::before {
+        top: 1px;
+        left: 2px;
+      }
     }
 
     &__description {
-      width: 290px;
-      height: 116px; /*временно*/
-      padding-bottom: 50px;
+      width: 289px;
+      padding-bottom: 47px;
       margin: 0;
     }
 
     &__order {
       width: 230px;
-      margin: 0;
-      margin-right: 60px;
+      margin-right: 57px;
+      margin-bottom: 59px;
     }
   }
 }
