Стиллизует страницу формы(mobile)

--- a/source/less/blocks/field-email.less
+++ b/source/less/blocks/field-email.less
@@ -1,13 +1,37 @@
 .field-email {
+  position: relative;
   display: flex;
   flex-direction: column;
+  margin-bottom: 33px;
 
-  &__field {
-    margin-bottom: 30px;
+  &__legend::after {
+    left: 82px;
+
+    width: 178px;
   }
 
-  &__legend {
-    margin-bottom: 25px;
+  &__field {
+    border: none;
+    border-bottom: 2px solid #000000;
+    padding-top: 22px;
+    padding-bottom: 16px;
+    .font(17px; 400; 18px);
+
+    &::placeholder {
+      color: rgba(68, 68, 68, 0.3);
+    }
+  }
+
+  &__icon {
+    position: absolute;
+
+    top: 33px;
+    right: 4px;
+
+    width: 32px;
+    height: 32px;
+
+    opacity: 0.2;
   }
 }
 
