--- a/source/less/blocks/field-info.less
+++ b/source/less/blocks/field-info.less
@@ -2,15 +2,24 @@
   display: flex;
   flex-direction: column;
 
-  &__field {
-    .pm-zero();
-    margin-bottom: 17px;
-    height: 142px;
-    width: 258px;
+  &__legend {
+    margin-bottom: 24px;
   }
 
-  &__legend {
-    margin-bottom: 25px;
+  &__field {
+    box-sizing: border-box;
+    .pm-zero();
+    height: 142px;
+    width: 260px;
+    padding-top: 14px;
+    padding-left: 14px;
+    margin-bottom: 16px;
+    .font(17px; 400; 18px);
+    border: 2px solid #444444;
+
+    &::placeholder {
+      color: rgba(68, 68, 68, 0.3);
+    }
   }
 }
 
