--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -1,11 +1,37 @@
 .fieldset-color {
+  margin-bottom: 43px;
+
+  &__legend {
+    margin-bottom: 35px;
+  }
+
   &__option {
-    height: 40px; /*Временно*/
-    margin-bottom: 22px;
+    position: relative;
+    display: flex;
+
+    &:not(:last-child) {
+      margin-bottom: 43px;
+    }
   }
 
   &__label {
+    display: block;
     padding-left: 62px;
+  }
+
+  &__indicator {
+    .pm-zero();
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+
+    top: -11px;
+    left: 0;
+
+    width: 40px;
+    height: 39px;
+
+    border: 2px solid #444444;
   }
 }
 
