--- a/source/less/blocks/fieldset-fullname.less
+++ b/source/less/blocks/fieldset-fullname.less
@@ -1,7 +1,28 @@
 .fieldset-fullname {
+  margin-bottom: 32px;
+
   &__option {
-    height: 70px; /*временно*/
-    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+
+    &:not(:last-child) {
+      margin-bottom: 22px;
+    }
+  }
+
+  &__legend {
+    margin-bottom: 28px;
+  }
+
+  &__field {
+    border: none;
+    border-bottom: 2px solid #000000;
+    padding: 16px 0;
+    .font(17px; 400; 18px);
+
+    &::placeholder {
+      color: rgba(68, 68, 68, 0.3);
+    }
   }
 }
 
