--- a/source/less/blocks/page-main-order.less
+++ b/source/less/blocks/page-main-order.less
@@ -6,16 +6,18 @@
 
   span {
     display: block;
-    height: 175px; /*временно для сетки*/
     .container(260px; 30px);
     margin: 0 auto;
+    padding-top: 70px;
+    padding-bottom: 76px;
+    text-align: center;
     .font(27px; 700; 30px);
   }
 
   &__description {
     .container(260px; 30px);
     margin: 0 auto;
-    padding-top: 28px;
+    padding-top: 22px;
     padding-bottom: 25px;
     font-size: 13px;
   }
