--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -33,6 +33,43 @@
 
     border: 2px solid #444444;
   }
+
+  &__field:checked ~ &__indicator::after {
+    content: "";
+    position: absolute;
+    top: 21px;
+    left: 6px;
+    width: 10px;
+    height: 2px;
+    background-color: #000000;
+    transform: rotate(45deg);
+  }
+
+  &__field:checked ~ &__indicator::before {
+    content: "";
+    position: absolute;
+    top: 17px;
+    left: 11px;
+    width: 20px;
+    height: 2px;
+    background-color: #000000;
+    transform: rotate(-45deg);
+  }
+
+  &__label:hover,
+  &__label:focus {
+    cursor: pointer;
+  }
+
+  &__label:hover ~ &__indicator,
+  &__label:focus ~ &__indicator {
+    border-color: #62d1ba;
+  }
+
+  &__label:active ~ &__indicator,
+  &__label:active ~ &__indicator::before, {
+    border-color: rgba(0, 0, 0, 0.3);
+  }
 }
 
 @media (min-width: @table-width) {
