--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -28,11 +28,40 @@
     top: -10px;
     left: 0;
 
-    width: 39px;
-    height: 39px;
+    width: 40px;
+    height: 40px;
 
     border: 2px solid #444444;
     border-radius: 50%;
+  }
+
+  &__field:checked ~ &__indicator::before {
+    content: "";
+
+    position: absolute;
+    top: 10px;
+    left: 10px;
+
+    width: 16px;
+    height: 16px;
+
+    border-radius: 50%;
+    background-color: #62d1ba;
+  }
+
+  &__label:hover,
+  &__label:focus {
+    cursor: pointer;
+  }
+
+  &__label:hover ~ &__indicator,
+  &__label:focus ~ &__indicator {
+    border-color: #62d1ba;
+  }
+
+  &__label:active ~ &__indicator,
+  &__label:active ~ &__indicator::before, {
+    border-color: rgba(0, 0, 0, 0.3);
   }
 }
 
