--- a/source/less/blocks/field-info.less
+++ b/source/less/blocks/field-info.less
@@ -39,17 +39,14 @@
 @media (min-width: @table-width) {
   .field-info {
     flex-direction: row;
-
-    &__legend {
-      .m-top();
-    }
+    align-items: baseline;
+    margin-bottom: 37px;
 
     &__field {
-      width: 500px;
-      height: 140px;
-      margin-top: 50px;
+      width: 501px;
+      height: 142px;
       margin-left: auto;
-      margin-bottom: 52px;
+      font-size: 19px;
     }
   }
 }
@@ -63,6 +60,7 @@
     &__field {
       width: 700px;
       margin-right: 175px;
+
     }
   }
 }
