--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -67,9 +67,38 @@
 
 @media (min-width: @table-width) {
   .fieldset-type {
+    margin-bottom: 11px;
+
     &__legend {
       position: relative;
-      .pos-top;
+      margin: 0;
+    }
+
+    &__option {
+      &:not(:last-child) {
+        margin-bottom: 57px;
+      }
+    }
+
+    &__label {
+      padding-left: 80px;
+      font-size: 19px;
+    }
+
+    &__indicator {
+      top: -16px;
+      left: 0;
+
+      width: 52px;
+      height: 52px;
+    }
+
+    &__field:checked ~ &__indicator::before {
+      top: 13px;
+      left: 13px;
+
+      width: 22px;
+      height: 22px;
     }
   }
 }
