--- a/source/less/blocks/page-main-order.less
+++ b/source/less/blocks/page-main-order.less
@@ -26,15 +26,34 @@
 @media (min-width: @table-width) {
   .page-main-order {
     span {
-      height: 210px; /*временно для сетки*/
+      position: relative;
+      padding-top: 93px;
+      padding-bottom: 89px;
       .container(668px; 50px);
+      .font(43px; 700; 50px);
       text-align: center;
+
+      &::after {
+        content: "";
+
+        position: absolute;
+        bottom: -5px;
+        right: 0;
+        z-index: 1;
+
+        width: 100%;
+        height: 24px;
+
+        .bg-img("../../img/bg-zigzag-fill.svg");
+        background-size: 768px 24px;
+      }
     }
 
     &__description {
       .container(668px; 50px);
-      padding-top: 80px;
-      padding-bottom: 60px;
+      padding-top: 65px;
+      margin-bottom: 50px;
+      .font(17px; 400; 30px);
     }
   }
 }
