Изменяет стили формы, с учетом необхобимости тянущихся фонов

--- a/source/less/blocks/field-tel.less
+++ b/source/less/blocks/field-tel.less
@@ -53,8 +53,9 @@
 
 @media (min-width: @table-width) {
   .field-tel {
+    .container(668px; 50px);
+    margin: 0 auto;
     margin-bottom: 19px;
-    background-color: @bg-block-dark;
     flex-direction: row;
     align-items: baseline;
 
@@ -70,7 +71,7 @@
 
     &__icon {
       top: 61px;
-      right: 26px;
+      right: 76px;
     }
   }
 }
