--- a/source/less/blocks/fieldset-fullname.less
+++ b/source/less/blocks/fieldset-fullname.less
@@ -41,7 +41,8 @@
 
 @media (min-width: @table-width) {
   .fieldset-fullname {
-    margin-bottom: 0;
+    .container(668px; 50px);
+    margin: 0 auto;
 
     &__legend {
       position: relative;
