--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -67,7 +67,10 @@
 
 @media (min-width: @table-width) {
   .fieldset-type {
-    margin-bottom: 11px;
+    position: relative;
+    .container(668px; 50px);
+    margin: 0 auto;
+    margin-bottom: 19px;
 
     &__legend {
       position: relative;
