--- a/source/less/blocks/field-email.less
+++ b/source/less/blocks/field-email.less
@@ -59,8 +59,9 @@
 
 @media (min-width: @table-width) {
   .field-email {
+    .container(668px; 50px);
+    margin: 0 auto;
     margin-bottom: 50px;
-    background-color: @bg-block-dark;
     flex-direction: row;
     align-items: baseline;
 
@@ -78,7 +79,7 @@
 
     &__icon {
       top: 16px;
-      right: 22px;
+      right: 72px;
     }
   }
 }
