--- a/source/less/blocks/field-info.less
+++ b/source/less/blocks/field-info.less
@@ -38,6 +38,8 @@
 
 @media (min-width: @table-width) {
   .field-info {
+    .container(668px; 50px);
+    margin: 0 auto;
     flex-direction: row;
     align-items: baseline;
     margin-bottom: 37px;
