--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -74,18 +74,20 @@
 
 @media (min-width: @table-width) {
   .fieldset-color {
-    background-color: @bg-block-dark;
+    .container(668px; 50px);
+    margin-left: auto;
+    margin-right: auto;
 
     &__legend {
       position: relative;
-      top: 76px;
+      top: 68px;
     }
 
     &__list {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      padding-top: 40px;
+      padding-top: 32px;
       margin-bottom: 11px;
     }
 
