Стиллизует страницу формы(desktop)

--- a/source/less/blocks/field-email.less
+++ b/source/less/blocks/field-email.less
@@ -86,13 +86,20 @@
 
 @media (min-width: @desktop-width) {
   .field-email {
+    .container(1050px; 50px);
+
     &__legend {
-      .m-left();
+      margin-left: 62px;
     }
 
     &__field {
       width: 700px;
       margin-right: 175px;
+    }
+
+    &__icon {
+      top: 16px;
+      right: 229px;
     }
   }
 }
