--- a/source/less/blocks/field-info.less
+++ b/source/less/blocks/field-info.less
@@ -55,14 +55,16 @@
 
 @media (min-width: @desktop-width) {
   .field-info {
+    .container(1050px; 50px);
+    margin-bottom: 33px;
+
     &__legend {
-      .m-left();
+      margin-left: 62px;
     }
 
     &__field {
       width: 700px;
       margin-right: 175px;
-
     }
   }
 }
