--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -133,12 +133,14 @@
 
 @media (min-width: @desktop-width) {
   .fieldset-color {
+    .container(1050px; 50px);
+
     &__legend {
-      .m-left();
+      margin-left: 61px;
     }
 
     &__option {
-      width: 245px;
+      width: 263px;
     }
   }
 }
