--- a/source/less/blocks/fieldset-fullname.less
+++ b/source/less/blocks/fieldset-fullname.less
@@ -79,8 +79,15 @@
 
 @media (min-width: @desktop-width) {
   .fieldset-fullname {
+    .container(1050px; 50px);
+
     &__legend {
-      .m-left();
+      margin-left: 61px;
+    }
+
+    &__list {
+      width: 698px;
+      margin-left: 177px;
     }
   }
 }
