--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -108,8 +108,11 @@
 
 @media (min-width: @desktop-width) {
   .fieldset-type {
+    .container(1050px; 50px);
+    margin-bottom: 18px;
+
     &__legend {
-      .m-left();
+      margin-left: 64px;
     }
   }
 }
