--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -106,11 +106,13 @@
 
 @media (min-width: @desktop-width) {
   .form {
-    .container(1050px; 50px);
-
     &__list {
-      width: 735px;
-      margin-right: 140px;
+      width: 789px;
+      margin-left: 176px;
+    }
+
+    &__wrapper--center {
+      .container(1050px; 50px);
     }
 
     &__notice {
