--- a/source/less/blocks/field-tel.less
+++ b/source/less/blocks/field-tel.less
@@ -78,13 +78,20 @@
 
 @media (min-width: @desktop-width) {
   .field-tel {
+    .container(1050px; 50px);
+
     &__legend {
-      .m-left();
+      margin-left: 62px;
     }
 
     &__field {
       width: 700px;
       margin-right: 175px;
+    }
+
+    &__icon {
+      top: 61px;
+      right: 233px;
     }
   }
 }
