Исправляет баги в разметке

--- a/source/less/blocks/site-nav.less
+++ b/source/less/blocks/site-nav.less
@@ -30,8 +30,9 @@
 
 @media (min-width: @table-width) {
   .site-nav {
-    order: 1;
     width: 334px;
+    order: 1;
+    z-index: 1;
 
     &__list {
       position: absolute;
