--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -1,5 +1,4 @@
 .user-list {
-  min-height: 78px; /*временно*/
   .pm-zero();
   list-style: none;
 
@@ -79,6 +78,7 @@
 
     &__link--tablet {
       position: absolute;
+      z-index: 1;
       right: 0;
       .font(15px; 400; 24px);
       padding: 0;
