--- a/source/less/blocks/search-form.less
+++ b/source/less/blocks/search-form.less
@@ -55,6 +55,7 @@
     &__item {
       width: 83px;
       padding-top: 36px;
+      padding-left: 82px;
       padding-bottom: 35px;
       box-shadow: inset 0 1px 0 0 rgba(236, 236, 236, 1),
         inset 1px 0 0 0 rgba(236, 236, 236, 1);
