--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -15,59 +15,48 @@
   }
 
   &__label {
-    display: block;
+    position: relative;
     padding-left: 62px;
+
+    &::before {
+      box-sizing: border-box;
+      content: "";
+      position: absolute;
+
+      top: -11px;
+      left: 0;
+
+      width: 40px;
+      height: 39px;
+
+      border: 2px solid #444444;
+    }
   }
 
-  &__indicator {
-    .pm-zero();
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-
-    top: -11px;
-    left: 0;
-
-    width: 40px;
-    height: 39px;
-
-    border: 2px solid #444444;
-  }
-
-  &__field:checked ~ &__indicator::after {
+  &__field:checked ~ &__label::after {
     content: "";
     position: absolute;
-    top: 21px;
-    left: 6px;
-    width: 10px;
-    height: 2px;
-    background-color: #000000;
-    transform: rotate(45deg);
-  }
 
-  &__field:checked ~ &__indicator::before {
-    content: "";
-    position: absolute;
-    top: 17px;
-    left: 11px;
-    width: 20px;
-    height: 2px;
-    background-color: #000000;
-    transform: rotate(-45deg);
+    top: 1px;
+    left: 9px;
+
+    width: 22px;
+    height: 16px;
+
+    .bg-img("../../img/icon-tick.svg");
+    background-size: 22px 16px;
   }
 
   &__label:hover,
   &__label:focus {
     cursor: pointer;
+
+    &::before {
+      border-color: #62d1ba;
+    }
   }
 
-  &__label:hover ~ &__indicator,
-  &__label:focus ~ &__indicator {
-    border-color: #62d1ba;
-  }
-
-  &__label:active ~ &__indicator,
-  &__label:active ~ &__indicator::before, {
+  &__label:active::before {
     border-color: rgba(0, 0, 0, 0.3);
   }
 }
@@ -102,31 +91,24 @@
     &__label {
       padding-left: 80px;
       font-size: 19px;
+
+      &::before {
+        top: -15px;
+        left: -1px;
+
+        width: 54px;
+        height: 52px;
+      }
     }
 
+    &__field:checked ~ &__label::after {
+      top: 1px;
+      left: 10px;
 
-    &__indicator {
-      top: -15px;
-      left: -1px;
+      width: 33px;
+      height: 22px;
 
-      width: 54px;
-      height: 52px;
-    }
-
-    &__field:checked ~ &__indicator::after {
-      top: 28px;
-      left: 7px;
-
-      width: 15px;
-      height: 2px;
-    }
-
-    &__field:checked ~ &__indicator::before {
-      top: 24px;
-      left: 15px;
-
-      width: 29px;
-      height: 2px;
+      background-size: 33px 22px;
     }
   }
 }
