--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -73,7 +73,7 @@
       position: relative;
       .container(668px; 50px);
       margin: 0 auto;
-      background-color: none;
+      background-color: @bg-block-light;
     }
 
     &__legend::after {
