--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -2,6 +2,11 @@
   .bg-img("../img/hero-mobile@1x.jpg");
   background-position: 50% -18px;
 
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../../img/hero-mobile@2x.jpg");
+    background-size: 575px auto;
+  }
+
   &__title {
     .pm-zero();
     padding-top: 70px;
@@ -16,8 +21,13 @@
 @media (min-width: @table-width) {
   .page-main {
     .bg-img("../../img/hero-tablet@1x.jpg");
-    background-position: 50% 0;
+    background-position: calc(50% + 9px) 0;
     background-color: @bg-main;
+
+    @media (min-resolution: @retina-dppx) {
+      background-image: url("../../img/hero-tablet@2x.jpg");
+      background-size: 1150px auto;
+    }
 
     &__title {
       .container(668px; 50px);
