--- a/source/less/blocks/production.less
+++ b/source/less/blocks/production.less
@@ -9,30 +9,13 @@
     box-sizing: border-box;
     border: 1px solid rgba(229, 229, 229, 1);
 
-
-    &::before {
-      content: "";
-
-      position: absolute;
-
-      top: 132px;
-      left: 80px;
-      z-index: 1;
-
-      width: 101px;
-      height: 77px;
-      .bg-img("../../img/icon-play.svg");
-    }
-
     &:hover,
     &:focus {
       cursor: pointer;
       box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
     }
-  }
 
-  &:active {
-    .item__header-box {
+    &:active {
       box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
     }
   }
@@ -68,6 +51,43 @@
     .bg-img("../../img/video-mobile@1x.jpg");
   }
 
+  &__button-play {
+    position: absolute;
+
+    top: 132px;
+    left: 79px;
+    z-index: 1;
+
+    width: 101px;
+    height: 77px;
+    border: none;
+    background-color: transparent;
+    outline: none;
+    .bg-img("../../img/icon-play.svg");
+
+    &:hover {
+      top: 122px;
+      left: 69px;
+
+      width: calc(101px * 1.2);
+      height: calc(77px * 1.2);
+
+      background-size: calc(101px * 1.2) calc(77px * 1.2);
+      cursor: pointer;
+    }
+
+    &:active {
+      top: 142px;
+      left: 89px;
+
+      width: calc(101px * 0.8);
+      height: calc(77px * 0.8);
+
+      background-size: calc(101px * 0.8) calc(77px * 0.8);
+      opacity: 0.3;
+    }
+  }
+
   &__description {
     .pm-zero();
     padding-top: 21px;
@@ -77,7 +97,7 @@
     font-size: 13px;
   }
 
-  &__order {
+  &__button-order {
     display: block;
     .button(193px);
     margin: 0 auto;
@@ -104,11 +124,6 @@
     &__wrapper {
       display: flex;
       flex-direction: column;
-
-      &::before {
-        top: 189px;
-        left: 283px;
-      }
     }
 
     &__video {
@@ -118,6 +133,21 @@
       order: -2;
       border-bottom: 1px solid rgba(229, 229, 229, 1);
       .bg-img("../../img/video-tablet@1x.jpg");
+    }
+
+    &__button-play {
+      top: 189px;
+      left: 283px;
+
+      &:hover {
+        top: 179px;
+        left: 273px;
+      }
+
+      &:active {
+        top: 199px;
+        left: 293px;
+      }
     }
 
     &__title {
@@ -144,7 +174,7 @@
       .font(15px; 400; 30px);
     }
 
-    &__order {
+    &__button-order {
       width: 584px;
       margin-bottom: 45px;
     }
@@ -163,20 +193,28 @@
     &__wrapper {
       position: static;
       padding-left: 77px;
-
-      &::before {
-        left: 340px;
-      }
     }
 
     &__video {
       position: absolute;
-
+      z-index: -1;
       top: 0;
       left: 50px;
       width: 682px;
       .bg-img("../../img/video-desktop@1x.jpg");
       border: none;
+    }
+
+    &__button-play {
+      left: 340px;
+
+      &:hover {
+        left: 330px;
+      }
+
+      &:active {
+        left: 350px;
+      }
     }
 
     &__title {
@@ -199,7 +237,7 @@
       margin: 0;
     }
 
-    &__order {
+    &__button-order {
       width: 230px;
       margin-right: 57px;
       margin-bottom: 59px;
