--- a/source/less/blocks/production.less
+++ b/source/less/blocks/production.less
@@ -49,6 +49,11 @@
     position: relative;
     left: -1px;
     .bg-img("../../img/video-mobile@1x.jpg");
+
+    @media (min-resolution: @retina-dppx) {
+      background-image: url("../../img/video-mobile@2x.jpg");
+      background-size: 260px auto;
+    }
   }
 
   &__button-play {
@@ -133,6 +138,11 @@
       order: -2;
       border-bottom: 1px solid rgba(229, 229, 229, 1);
       .bg-img("../../img/video-tablet@1x.jpg");
+
+      @media (min-resolution: @retina-dppx) {
+        background-image: url("../../img/video-tablet@2x.jpg");
+        background-size: 668px auto;
+      }
     }
 
     &__button-play {
@@ -203,6 +213,11 @@
       width: 682px;
       .bg-img("../../img/video-desktop@1x.jpg");
       border: none;
+
+      @media (min-resolution: @retina-dppx) {
+        background-image: url("../../img/video-desktop@2x.jpg");
+        background-size: 682px auto;
+      }
     }
 
     &__button-play {
