--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -141,6 +141,11 @@
     padding-bottom: 79px;
     .bg-img("../../img/review@1x.jpg");
 
+    @media(min-resolution: @retina-dppx) {
+      background-image: url("../../img/review@2x.jpg");
+      background-size: 350px auto;
+    }
+
     &__wrapper {
       position: relative;
     }
