--- a/source/less/blocks/table-description.less
+++ b/source/less/blocks/table-description.less
@@ -1,10 +1,10 @@
 .table-description {
   width: 100%;
-  border-collapse: collapse;
   margin-bottom: 27px;
+  border-collapse: collapse;
 
   &__row {
-    border-bottom: 1px solid @table-border;
+    border-bottom: 1px solid @border-color;
   }
 
   &__column1,
