--- a/source/less/globals/colors.less
+++ b/source/less/globals/colors.less
@@ -1,12 +1,20 @@
-@legend-color: #63d1bb;
 @link-color: #000000;
+@link-contrast: #46c1ae;
+@bg-main: #f9f9f9;
 @bg-block-dark: #f1f1f1;
 @bg-block-light: #ffffff;
-@bg-title-light: #63d1bb;
-@bg-title-dark: #56c3b2;
-@title-color: #ffffff;
-@title-week: #63d1bb;
-@table-border: #ececec;
 @button-color: #444444;
-@bg-main: #f9f9f9;
-@icon-color: #46c1ae;
+@button-color-hover: rgba(255, 255, 255, 1);
+@button-color-active: rgba(255, 255, 255, 0.3);
+@header-shadow: rgba(236, 236, 236, 1);
+@box-shadow: rgba(0, 0, 0, 0.1);
+@border-color: rgba(229, 229, 229, 1);
+@reviev-text: #444444;
+@input-border: #444444;
+@border-dark: #000000;
+@main-contrast: #63d1bb;
+@main-contrast-dark: #56c3b2;
+@title-color: #ffffff;
+@placeholder: rgba(68, 68, 68, 0.3);
+@placeholder-act: rgba(0, 0, 0, 1);
+@toggle-color: #221f1f;
