--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -29,7 +29,7 @@
       width: 40px;
       height: 39px;
 
-      border: 2px solid #444444;
+      border: 2px solid @input-border;
     }
   }
 
@@ -52,12 +52,13 @@
     cursor: pointer;
 
     &::before {
-      border-color: #62d1ba;
+      border-color: @main-contrast;
     }
   }
 
   &__label:active::before {
-    border-color: rgba(0, 0, 0, 0.3);
+    border-color: @border-dark;
+    opacity: 0.3;
   }
 }
 
@@ -76,8 +77,8 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      padding-top: 32px;
       margin-bottom: 11px;
+      padding-top: 32px;
     }
 
     &__option {
