--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -29,7 +29,7 @@
       width: 40px;
       height: 40px;
 
-      border: 2px solid #444444;
+      border: 2px solid @input-border;
       border-radius: 50%;
     }
   }
@@ -45,7 +45,7 @@
     height: 16px;
 
     border-radius: 50%;
-    background-color: #62d1ba;
+    background-color: @main-contrast;
   }
 
   &__label:hover,
@@ -53,12 +53,13 @@
     cursor: pointer;
 
     &::before {
-      border-color: #62d1ba;
+      border-color: @main-contrast;
     }
   }
 
-  &__label:active::before, {
-    border-color: rgba(0, 0, 0, 0.3);
+  &__label:active::before {
+    border-color: @border-dark;
+    opacity: 0.3;
   }
 }
 
