--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -10,7 +10,7 @@
   &__legend {
     position: relative;
     .font(17px; 700; 16px);
-    color: @legend-color;
+    color: @main-contrast;
     text-transform: uppercase;
 
     &::after {
@@ -23,7 +23,7 @@
       width: 198px;
       height: 1px;
 
-      background-color: #63d1bb;
+      background-color: @main-contrast;
     }
   }
 
@@ -49,13 +49,13 @@
 
     &:hover,
     &:focus {
+      color: @button-color-hover;
+      background-color: @button-color;
       cursor: pointer;
-      background-color: #444444;
-      color: rgba(255, 255, 255, 1);
     }
 
     &:active {
-      color: rgba(255, 255, 255, 0.3);
+      color: @button-color-active;
     }
   }
 }
