--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -23,20 +23,19 @@
     &__logo {
       display: block;
       position: relative;
-      top: middle;
       left: 0;
 
       width: 102px;
       height: 34px;
 
-      padding-top: 50px;
-      padding-bottom: 58px;
+      padding-top: 51px;
+      padding-bottom: 57px;
     }
 
     &__logo:hover,
     &__logo:focus {
       path {
-        fill: @icon-color;
+        fill: @link-contrast;
       }
     }
 
