--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,18 +1,18 @@
 .page-header {
-  box-shadow: inset 0 1px 0 0 rgba(236, 236, 236, 1),
-    inset 0 -1px 0 0 rgba(236, 236, 236, 1);
+  box-shadow: inset 0 1px 0 0 @header-shadow,
+    inset 0 -1px 0 0 @header-shadow;
 
   &__wrapper {
     .center(320px);
   }
 
   &__logo {
+    z-index: 1;
     display: block;
     width: 86px;
     height: 35px;
     margin-left: calc(50% - 43px);
     padding: 22.5px 0;
-    z-index: 1;
 
     &:hover,
     &:focus {
@@ -46,8 +46,8 @@
       position: absolute;
       width: 112px;
       height: 46px;
-      padding: 21.5px 0;
       margin-left: -1px;
+      padding: 21.5px 0;
     }
 
     &__logo-image {
@@ -64,10 +64,10 @@
     }
 
     &__logo {
-      width: 148px;
-      height: 73px;
       top: -13px;
       left: 50%;
+      width: 148px;
+      height: 73px;
       margin-left: -74px;
     }
 
