--- a/source/less/blocks/production.less
+++ b/source/less/blocks/production.less
@@ -5,18 +5,18 @@
   margin-bottom: 58px;
 
   &__wrapper {
-    position: relative;
     box-sizing: border-box;
-    border: 1px solid rgba(229, 229, 229, 1);
+    position: relative;
+    border: 1px solid @border-color;
 
     &:hover,
     &:focus {
       cursor: pointer;
-      box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+      box-shadow: 0 6px 10px 0 @box-shadow;
     }
 
     &:active {
-      box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+      box-shadow: 0 3px 5px 0 @box-shadow;
     }
   }
 
@@ -66,8 +66,8 @@
     width: 101px;
     height: 77px;
     border: none;
-    background-color: transparent;
     outline: none;
+    background-color: transparent;
     .bg-img("../../img/icon-play.svg");
 
     &:hover {
@@ -110,13 +110,13 @@
 
     &:hover,
     &:focus {
+      color: @button-color-hover;
+      background-color: @button-color;
       cursor: pointer;
-      background-color: #444444;
-      color: rgba(255, 255, 255, 1);
     }
 
     &:active {
-      color: rgba(255, 255, 255, 0.3);
+      color: @button-color-active;
     }
   }
 }
@@ -132,11 +132,11 @@
     }
 
     &__video {
-      width: 668px;
-      height: 455px;
       top: -1px;
       order: -2;
-      border-bottom: 1px solid rgba(229, 229, 229, 1);
+      width: 668px;
+      height: 455px;
+      border-bottom: 1px solid @border-color;
       .bg-img("../../img/video-tablet@1x.jpg");
 
       @media (min-resolution: @retina-dppx) {
@@ -194,11 +194,10 @@
 @media (min-width: @desktop-width) {
   .production {
     position: relative;
-    width: 1050px;
-    padding-bottom: 42px;
     display: flex;
     justify-content: flex-end;
-
+    width: 1050px;
+    padding-bottom: 42px;
 
     &__wrapper {
       position: static;
@@ -207,9 +206,9 @@
 
     &__video {
       position: absolute;
-      z-index: -1;
       top: 0;
       left: 50px;
+      z-index: -1;
       width: 682px;
       .bg-img("../../img/video-desktop@1x.jpg");
       border: none;
@@ -248,8 +247,8 @@
 
     &__description {
       width: 289px;
-      padding-bottom: 47px;
       margin: 0;
+      padding-bottom: 47px;
     }
 
     &__button-order {
