--- a/source/less/blocks/site-nav.less
+++ b/source/less/blocks/site-nav.less
@@ -10,12 +10,12 @@
 
   &__link {
     display: block;
-    .font(17px; 700; 24px);
     padding-top: 27.5px;
     padding-bottom: 27.5px;
     padding-left: 76px;
+    .font(17px; 700; 24px);
     color: @link-color;
-    box-shadow: inset 0 1px 0 0 rgba(236, 236, 236, 1);
+    box-shadow: inset 0 1px 0 0 @header-shadow;
 
     &:hover,
     &:focus {
@@ -30,9 +30,9 @@
 
 @media (min-width: @table-width) {
   .site-nav {
-    width: 334px;
     order: 1;
     z-index: 1;
+    width: 334px;
 
     &__list {
       position: absolute;
@@ -41,9 +41,9 @@
 
     &__link {
       width: 167px;
-      font-size: 15px;
       padding: 0;
       padding-top: 17px;
+      font-size: 15px;
       box-shadow: none;
     }
   }
@@ -54,13 +54,13 @@
     order: 0;
 
     &__list {
-      width: 440px;
       flex-wrap: wrap;
+      width: 440px;
       margin-left: -35px;
     }
 
     &__item:first-child {
-      box-shadow: 1px 0 0 0 rgba(236, 236, 236, 1);
+      box-shadow: 1px 0 0 0 @header-shadow;
     }
 
     &__link {
