--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -3,20 +3,34 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 141px;
+    width: 142px;
     .pm-zero();
     padding-left: 56px;
     padding-right: 61px;
     padding-top: 25px;
-    padding-bottom: 22px;
+    padding-bottom: 23px;
     list-style: none;
-    box-shadow: inset 0 -1px 0 0 rgba(229, 229, 229, 1);
+    box-shadow: inset 0 -1px 0 0 @header-shadow;
+  }
+
+  &__icon--instagram {
+    margin-top: 3px;
+    margin-left: 1px;
+  }
+
+  &__icon--facebook {
+    margin-top: -1px;
+    margin-left: 1px;
+  }
+
+  &__icon--twitter {
+    margin-top: 2px;
   }
 
   &__icon:hover,
   &__icon:focus {
     path {
-      fill: @icon-color;
+      fill: @link-contrast;
     }
   }
 
@@ -30,7 +44,8 @@
     margin-left: auto;
 
     &__list {
-      padding-right: 84px;
+      padding-top: 30px;
+      padding-right: 83px;
       box-shadow: none;
     }
   }
@@ -41,10 +56,10 @@
     margin-left: 0;
 
     &__list {
-      padding-right: 0;
-      padding-left: 0;
       margin-left: 350px;
       margin-right: 274px;
+      padding-right: 0;
+      padding-left: 0;
     }
   }
 }
