--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -9,12 +9,12 @@
   &__link {
     position: relative;
     display: block;
-    .font(17px; 700; 24px);
     padding-top: 27.5px;
     padding-bottom: 27.5px;
     padding-left: 76px;
+    .font(17px; 700; 24px);
     color: @link-color;
-    box-shadow: inset 0 1px 0 0 rgba(236, 236, 236, 1);
+    box-shadow: inset 0 1px 0 0 @header-shadow;
 
     &:hover,
     &:focus {
@@ -34,21 +34,20 @@
     width: 21px;
     height: 18px;
 
-    path {
-      fill: rgba(0, 0, 0, 0.2);
-    }
+    opacity: 0.2;
   }
 
   &__link:hover &__icon,
   &__link:focus &__icon {
+    opacity: 1;
     path {
-      fill: rgba(99, 209, 187, 1);
+      fill: @main-contrast;
     }
   }
 
   &__link:active &__icon {
     path {
-      fill: rgba(99, 209, 187, 0.3);
+      fill: @main-contrast;
     }
   }
 }
@@ -58,8 +57,8 @@
     width: 264px;
 
     &__item {
-      box-shadow: inset 1px 0 0 0 rgba(236, 236, 236, 1);
       text-align: right;
+      box-shadow: inset 1px 0 0 0 @header-shadow;
     }
 
     &__link {
@@ -80,11 +79,12 @@
       position: absolute;
       z-index: 1;
       right: 0;
-      .font(15px; 400; 24px);
+
       padding: 0;
       padding-top: 17px;
-      box-shadow: none;
+      .font(15px; 400; 24px);
       text-align: right;
+      box-shadow: none;
     }
   }
 }
