Изменяет имя переменных

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -49,13 +49,13 @@
 
     &:hover,
     &:focus {
-      color: @button-color-hover;
-      background-color: @button-color;
+      color: @btn-color-hov;
+      background-color: @btn-color;
       cursor: pointer;
     }
 
     &:active {
-      color: @button-color-active;
+      color: @btn-color-act;
     }
   }
 }
