--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -114,12 +114,12 @@
 
     &:hover,
     &:focus {
-      background-color: @button-color;
-      color: @button-color-hover;
+      background-color: @btn-color;
+      color: @btn-color-hov;
     }
 
     &:active {
-      color: @button-color-active;
+      color: @btn-color-act;
     }
   }
 
