--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -86,15 +86,14 @@
     padding: 14px 0;
     .button();
 
-
     &:hover,
     &:focus {
-      background-color: @button-color;
-      color: @button-color-hover;
+      background-color: @btn-color;
+      color: @btn-color-hov;
     }
 
     &:active {
-      color: @button-color-active;
+      color: @btn-color-act;
     }
   }
 }
