--- a/source/less/blocks/product-week.less
+++ b/source/less/blocks/product-week.less
@@ -50,14 +50,14 @@
 
   &__order:hover,
   &__order:focus {
-    background-color: @button-color;
-    color: @button-color-hover;
+    background-color: @btn-color;
+    color: @btn-color-hov;
 
     cursor: pointer;
   }
 
   &__order:active {
-    color: @button-color-active;
+    color: @btn-color-act;
   }
 
   &::after {
