--- a/source/less/globals/colors.less
+++ b/source/less/globals/colors.less
@@ -3,9 +3,9 @@
 @bg-main: #f9f9f9;
 @bg-block-dark: #f1f1f1;
 @bg-block-light: #ffffff;
-@button-color: #444444;
-@button-color-hover: rgba(255, 255, 255, 1);
-@button-color-active: rgba(255, 255, 255, 0.3);
+@btn-color: #444444;
+@btn-color-hov: rgba(255, 255, 255, 1);
+@btn-color-act: rgba(255, 255, 255, 0.3);
 @header-shadow: rgba(236, 236, 236, 1);
 @box-shadow: rgba(0, 0, 0, 0.1);
 @border-color: rgba(229, 229, 229, 1);
