--- a/source/less/globals/mixins.less
+++ b/source/less/globals/mixins.less
@@ -29,10 +29,10 @@
 .button(@width: 260px; @min-height: 52px;) {
   width: @width;
   min-height: @min-height;
-  border: 2px solid @button-color;
+  border: 2px solid @btn-color;
   text-align: center;
   .font(17px; 700; 20px);
   text-transform: uppercase;
-  color: @button-color;
+  color: @btn-color;
   background-color: transparent;
 }
