исправляет ошибки по тревису

--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -175,7 +175,7 @@
     &__text {
       margin-bottom: 56px;
       .font(17px; 400; 30px);
-      color: @reviev-text
+      color: @reviev-text;
     }
 
     &__buttons {
