Переопределяет свойства логотипа в футере

--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -30,13 +30,13 @@
 
       padding-top: 51px;
       padding-bottom: 57px;
+      fill: @logo-footer-color;
     }
 
     &__logo:hover,
     &__logo:focus {
-      path {
-        fill: @link-contrast;
-      }
+      fill: @link-contrast;
+      cursor: pointer;
     }
 
     &__logo:active {
