--- a/source/less/globals/colors.less
+++ b/source/less/globals/colors.less
@@ -18,4 +18,4 @@
 @placeholder: rgba(68, 68, 68, 0.3);
 @placeholder-act: rgba(0, 0, 0, 1);
 @toggle-color: #221f1f;
-@logo-footer-color: #231F20;
+@icon-color: #231F20;
