--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -30,7 +30,7 @@
 
       padding-top: 51px;
       padding-bottom: 57px;
-      fill: @logo-footer-color;
+      fill: @icon-color;
     }
 
     &__logo:hover,
