--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -13,6 +13,10 @@
     box-shadow: inset 0 -1px 0 0 @header-shadow;
   }
 
+  &__icon {
+    fill: @icon-color;
+  }
+
   &__icon--instagram {
     margin-top: 3px;
     margin-left: 1px;
@@ -29,9 +33,7 @@
 
   &__icon:hover,
   &__icon:focus {
-    path {
-      fill: @link-contrast;
-    }
+    fill: @link-contrast;
   }
 
   &__icon:active {
