изменяет стили иконки карточки товара

--- a/source/less/blocks/item.less
+++ b/source/less/blocks/item.less
@@ -45,6 +45,7 @@
     height: 19px;
 
     opacity: 0.2;
+    fill: @icon-color;
   }
 
   &:hover,
@@ -74,10 +75,7 @@
   &:hover &__icon,
   &:focus &__icon {
     opacity: 1;
-
-    path {
-      fill: @main-contrast;
-    }
+    fill: @main-contrast;
   }
 
   &:active &__icon {
