Исправляет стили подключенных ранее иконок

--- a/source/less/blocks/field-email.less
+++ b/source/less/blocks/field-email.less
@@ -13,6 +13,7 @@
   &__field {
     padding-top: 22px;
     padding-bottom: 16px;
+    padding-right: 45px;
     .font(17px; 400; 18px);
     border: none;
     border-bottom: 2px solid @border-dark;
@@ -51,10 +52,7 @@
   &__field:focus ~ &__icon,
   &__field:active ~ &__icon {
     opacity: 1;
-
-    path {
-      fill: @main-contrast;
-    }
+    fill: @main-contrast;
   }
 }
 
