--- a/source/less/blocks/field-tel.less
+++ b/source/less/blocks/field-tel.less
@@ -9,6 +9,7 @@
     border-bottom: 2px solid @border-dark;
     padding-top: 17px;
     padding-bottom: 13px;
+    padding-right: 45px;
     .font(19px; 400; 18px);
 
     &::placeholder {
@@ -45,10 +46,7 @@
   &__field:focus ~ &__icon,
   &__field:active ~ &__icon {
     opacity: 1;
-
-    path {
-      fill: @main-contrast;
-    }
+    fill: @main-contrast;
   }
 }
 
