Оптимизирует форму. задает глубину иконкам форм

--- a/source/less/blocks/field-tel.less
+++ b/source/less/blocks/field-tel.less
@@ -11,6 +11,7 @@
     padding-bottom: 13px;
     padding-right: 45px;
     .font(19px; 400; 18px);
+    background-color: transparent;
 
     &::placeholder {
       color: @placeholder;
@@ -19,6 +20,7 @@
 
   &__icon {
     position: absolute;
+    z-index: -1;
 
     top: 33px;
     right: 8px;
