--- a/source/less/blocks/field-email.less
+++ b/source/less/blocks/field-email.less
@@ -15,6 +15,7 @@
     padding-bottom: 16px;
     padding-right: 45px;
     .font(17px; 400; 18px);
+    background-color: transparent;
     border: none;
     border-bottom: 2px solid @border-dark;
 
@@ -25,6 +26,7 @@
 
   &__icon {
     position: absolute;
+    z-index: -1;
 
     top: 33px;
     right: 4px;
