--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "globals/global.less";
 @import "globals/mixins.less";
 @import "globals/normalize.less";
+@import "globals/sprite.less";
 @import "globals/variables.less";
 @import "globals/visually-hidden.less";
 @import "blocks/catalog.less";
