Добавляет новые переменные цвета

--- a/source/less/globals/colors.less
+++ b/source/less/globals/colors.less
@@ -19,3 +19,9 @@
 @placeholder-act: rgba(0, 0, 0, 1);
 @toggle-color: #221f1f;
 @icon-color: #231F20;
+@popup-background: rgba(255, 255, 255, 0.9);
+@popup-outline: #c6c6c6;
+@popup-shadow: rgba(0, 0, 0, 0.25);
+@popup-title: #444444;
+@popup-item-border: rgba(68, 68, 68, 0.1);
+@popup-item-border-hov: rgba(68, 68, 68, 0.1);
